# FaceAlignment3kFPS

./: .gitmodules  CMakeLists.txt  LBFModel.cpp  LBFModel.h  common.h  facedetector.h  numerical.hpp  regressionforest.hpp  regressiontree.hpp  trainsettings.xml  transformations.h  utils.h
Cpp/FaceAlignment3kFPS/FaceAlignment3kFPS/: LBFModel.cpp  LBFModel.h  common.h  decisiontree.hpp  facedetector.cpp  facedetector.h  main.cpp  randomforest.hpp  regressionforest.hpp  regressiontree.hpp  train.bat  transformations.h  utils.h
extras/libface/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile.cmake  NEWS  README  libface.pc.cmake
extras/libface/examples/: CMakeLists.txt  FaceDetection.cpp  README  RandomTests.cpp  Test.cpp  Train.cpp
extras/libface/examples/gui/: CMakeLists.txt
extras/libface/examples/gui/src/: CMakeLists.txt  faceitem.cpp  faceitem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
extras/libface/src/: CMakeLists.txt  Eigenfaces.cpp  FisherCore.cpp  FisherCore.h  LibFaceConfig.h
extras/tinyxml2/: CMakeLists.txt  tinyxml2.cpp  tinyxml2.h  xmltest.cpp
tests/: CMakeLists.txt  test_transformation.cpp
